--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -17,125 +17,41 @@
 </head>
 
 <body>
-    <header>
-        <div class="top-header">
-            <div class="logo">
-                <img class="logo" src="images/logo.png" alt="Logo electroarco">
-            </div>
-            <div class="search-button-container">
-                <div class="search-container">
-                    <div class="contenedor-search">
-                    <button class="button1"><i class="fas fa-search"></i> </button>
-                    <input type="text" placeholder="buscar productos">
-                </div>
-                </div>
-            </div>
-            <div class="bars"><i class="fa-solid fa-bars fa-fw"></i></div>
-            <div class="Carro">
-                <p class="text">Carrito de compras</p>
-            </div>
-            <div class="user">
-                <p><i class="fa-solid fa-user fa-fw"></i> <p class="text2">Usuario</p></p>
-            </div>
-            <div class="heart"><i class="fa-solid fa-heart fa-fw"></i></div>
-            <div class="cart">
-                <i class="fa-solid fa-cart-shopping fa-fw"></i>
-            </div>
-        </div>
-    </header>
+    <header></header>
     <main>
-        <div class="text-one">Productos Agregados</div>
-        <hr>
-        <section class="products">
-            <article>
-                <div class="img"> <img src="images/horno.jpeg" alt="Producto1" class="product_img"></div>
-                <div class="descriprion">
-                    <div class="name">
-                        <h4 class="description">Horno Microondas Wonder 25 Lts</h4>
-                    </div>
-
-                    <div class="containerinf">
-                        <article>
-                            <div class="cantidad">
-                                <div class="buton-one"> <button class="increase">
-                                        ʌ
-                                    </button>
-                                </div>
-                                <div class="value_cont">
-                                    <h1 id="amount" value="">1</h1>
-                                </div>
-                                <div class="buton-two"> <button class="decrease">
-                                        v
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="price">
-                                <p>$600.000</p>
-                            </div>
-                            <div class="reset">
-                                <p><a href="#">Eliminar</i></a></p>
-                            </div>
-                    </div>
-            </article>
-            <article>
-                <div class="img"> <img src="images/laptop.jpg" alt="Producto2" class="product_img"></div>
-                <div class="descriprion">
-                    <div class="name">
-                        <h4 class="description">Computador hp modelo 2023</h4>
-                    </div>
-
-                    <div class="containerinf">
-                        <article>
-                            <div class="cantidad">
-                                <div class="buton-one"> <button class="increase">
-                                        ʌ
-                                    </button>
-                                </div>
-                                <div class="value_cont">
-                                    <h1 id="amount" value="">1</h1>
-                                </div>
-                                <div class="buton-two"> <button class="decrease">
-                                        v
-                                    </button>
-                                </div>
-                            </div>
-
-                            <div class="price">
-                                <p>$2.40.000</p>
-                            </div>
-                            <div class="reset">
-                                <p><a href="#">Eliminar</i></a></p>
-                            </div>
-                    </div>
-            </article>
-
-
-        </section>
-    </main>
-    <hr class="two">
-    <footer>
-        <div class="container-two">
-            <div class="container">
-                <div class="valor">
-                    <p class="text1">Valor del envio</p>
-                </div>
-                <div class="valor-1">
-                    <h3>$15.000</h3>
-                </div>
-            </div>
-            <div class="container">
-                <div class="valor">
-                    <p class="text1">Total</p>
-                </div>
-                <div class="valor-1">
-                    <h3>$155.000</h3>
-                </div>
-            </div>
+        <img src="images/barra.png" alt="">
+        <div class="title">
+            <h1 class="title"> Carro de compras</h1>
         </div>
-        <div class="buy"> <button class="buy">
-                Continuar compra
-            </button></div>
+        <img class="banner" src="images/banner.jpg">
+        <div class="main-article">
+            <article>
+                <div class="img">
+                    <img class="article" src="images/img-tv-samsung-smart.jpg">
+                </div>
+                <div class="content">
+                    <div class="brand">
+                        <p>Tv samsung smart
+                        </p>
+                    </div>
+                    <div class="name">
+                        <h2>TV SAMSUNG 50" SMART TV</h2>
+                    </div>
+                    <div class="id">
+                        <p>Codigo 422003</p>
+                    </div>
+                    <div class="shipping"> <i class="fa-solid fa-check"></i>
+                        <p class="shipping">Envio a domicilio</p>
+                    </div>
+                    <div class="shipping"> <i class="fa-solid fa-check"></i>
+                        <p class="shipping">Retiro en tienda</p>
+                    </div>
+                    <i class="fa-solid fa-trash-can"></i>
+                </div>
+            </article>
+        </div>
+    </main>
+    <footer>
     </footer>
 
 </body>
