--- a/src/views/productdetail.html
+++ b/src/views/productdetail.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/productdetail.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/34b99c374a.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
     <title>ElectoArco</title>
 </head>
 
@@ -197,49 +198,43 @@
         </section>
     </main>
     <footer>
-        <section class="add">
-            <button name="add"><a href="#">
-                    <p>Agregar al Carrito</p>
-                </a></button>
-        </section>
-        <section class="pieDePagina">
-            <div id="pieDePagina1">
-                <div id="pieDePagina1-1">
+        <div class="footerContainer1">
+            <div class="containerPQRS">
+                <div class="iconPaper">
                     <i class="far fa-question-circle"></i>
-                    <p id="questions">Preguntas frecuentes</p>
                 </div>
-                <p id="questions1">Heading</p>
-                <p id="questions2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu
-                    interdum auctor,
-                    ante
-                    eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
-                    urna.</p>
+                <div class="text1">
+                    <p>Te escuchamos/PQRS</p>
+                </div>
             </div>
-            <div id="pieDePagina2">
-                <div id="pieDePagina2-1">
+            <div class="containerSend">
+                <div class="iconSend">
                     <i class="far fa-compass"></i>
-                    <p id="retiroEnvio">Métodos de retiro y envío</p>
                 </div>
-                <p id="retiroEnvio1">Heading</p>
-                <p id="retiroEnvio2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu
-                    interdum auctor,
-                    ante
-                    eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
-                    urna.</p>
-            </div>
-            <div id="pieDePagina3">
-                <div id="pieDePagina3-1">
-                    <i class="fas fa-shield-alt"></i>
-                    <p id="politicas">Nuestras politicas</p>
+                <div class="text1">
+                    <p>Métodos de Retiro y Envío</p>
                 </div>
-                <p id="politicas1">Heading</p>
-                <p id="politicas2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ornare, tellus eu
-                    interdum auctor,
-                    ante
-                    eros tincidunt libero, et rutrum arcu erat vel nulla. Maecenas eu vulputate odio, lacinia ornare
-                    urna.</p>
             </div>
-        </section>
+            <div class="containerPersonalInformation">
+                <div class="iconPersonal">
+                    <i class="far fa-hand-point-up"></i>
+                </div>
+                <div>
+                    <p>Autogestión de Datos personales</p>
+                </div>
+            </div>
+            <div class="containerPhone">
+                <div class="iconPhone">
+                    <i class="fas fa-phone-square-alt"></i>
+                </div>
+                <div>
+                    <p>Venta telefónica: 018000 00 0000</p>
+                </div>
+            </div>
+        </div>
+        <div>
+            
+        </div>
     </footer>
 </body>
 
