Agregando cambios a carro de compras

--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -49,6 +49,37 @@
                     <i class="fa-solid fa-trash-can"></i>
                 </div>
             </article>
+            <div class="container-total">
+                <div class="content-button">
+                    <button class="decrement"><i class="fa-solid fa-minus"></i></button>
+                    <h4>1</h4>
+                    <button class="increment"><i class="fa-solid fa-plus"></i></button>
+                </div>
+                <div class="information">
+                    <p class="price">$2.300.200 und</p>
+                    <p class="discount">5% off und</p>
+                </div>
+            </div>
+        </div>
+        <div class="purchase-summary">
+            <div class="title">
+                <h1 class="title"> Resumen de tu compra</h1>
+            </div>
+            <div class="subtotal">
+                <p class="subtotal"> Sub total </p>
+                <p class="subtotal"> $2.300.200 </p>
+            </div>
+            <div class="saving">
+                <p class="saving"> Ahorro </p>
+                <p class="saving"> -$115.100</p>
+            </div>
+            <div class="total">
+                <p class="total"> Total </p>
+                <p class="total"> $2.185.190</p>
+            </div>
+            <div class="button"> <button class="text" type="submit">Continuar</button></div>
+            <div class="location"><i class="fa-solid fa-location-dot"></i>
+            <p class="location"> Precios y opciones de entrega basado en tu ubicación actual.</p></div>
         </div>
     </main>
     <footer>
