--- a/src/public/css/productCart.css
+++ b/src/public/css/productCart.css
@@ -49,6 +49,7 @@ article {
     width: 100%;
     margin: auto;
     position: relative;
+    border-bottom: 1px solid var(--grisOscuro);
 }
 .content .fa-trash-can{
     display: block;
@@ -105,4 +106,154 @@ p.shipping {
 }
 i.fa-solid.fa-check {
     color: var(--verde);
+}
+.container-total {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    margin-top: 5px;
+}
+.content-button {
+    display: flex;
+    flex-wrap: wrap;
+    width: 40%;
+    border: solid 1px;
+    border-radius: 2px;
+    border-color: var(--grisOscuro);
+    height: 45px;
+}
+button.decrement {
+    display: flex;
+    flex-wrap: wrap;
+    width: 33%;
+    align-content: center;
+    justify-content: center;
+    border: none;
+    background-color: var(--blanco);
+}
+h4 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 34%;
+    align-content: center;
+    justify-content: center;
+    border-left: solid 1px var(--grisOscuro);
+    border-right: solid 1px var(--grisOscuro);
+}
+button.increment {
+    display: flex;
+    flex-wrap: wrap;
+    width: 33%;
+    align-content: center;
+    justify-content: center;
+    border: none;
+    background-color: var(--blanco);
+}
+
+.information {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+}
+p.price {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    justify-content: flex-end;
+    font-size: 15px;
+}
+p.discount {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    justify-content: flex-end;
+    font-size: 12px;
+    color: var(--verde);
+
+}
+.purchase-summary {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    background-color: var(--blanco);
+    margin-top: 5px;
+}
+.subtotal {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+p.subtotal {
+    display: flex;
+    flex-wrap: wrap;
+    width: 45%;
+    justify-content: flex-end;
+    font-size: 15px;
+}
+.saving {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+p.saving {
+    display: flex;
+    flex-wrap: wrap;
+    width: 45%;
+    justify-content: flex-end;
+    font-size: 15px;
+}
+.total {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    border-bottom: solid 1px var(--grisOscuro);
+}
+p.total {
+    display: flex;
+    flex-wrap: wrap;
+    width: 45%;
+    justify-content: flex-end;
+    font-size: 18px;
+    margin-bottom: 5px;
+    border: none;
+}
+.button {
+    display: flex;
+    flex-wrap: wrap;
+    width: 75%;
+    margin: auto;
+    padding-top: 10px;
+}
+button.text {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+    font-size: 18px;
+    background-color: var(--rojo);
+    border: none;
+    border-radius: 5px;
+    height: 30px;
+    align-content: center;
+    color: var(--blanco);
+}
+.location {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    margin-top: 10px;
+}
+i.fa-solid.fa-location-dot {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 20px;
+    width: 20%;
+    margin: auto;
+    justify-content: center;
+}
+p.location {
+    font-size: 12px;
+    width: 80%;
+    margin: auto;
+    display: flex;
 }
