Agregando cambios al carrito de compras y cambiando extencion a ejs

--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -19,12 +19,12 @@
 <body>
     <header></header>
     <main>
-        <img src="images/barra.png" alt="">
-        <div class="title">
-            <h1 class="title"> Carro de compras</h1>
-        </div>
-        <img class="banner" src="images/banner.jpg">
+        <div class="barra"><img src="images/barra.png" alt=""></div>
         <div class="main-article">
+            <div class="title">
+                <h1 class="title"> Carro de compras</h1>
+            </div>
+            <div class="banner"><img class="banner" src="images/banner.jpg"></div>
             <article>
                 <div class="img">
                     <img class="article" src="images/img-tv-samsung-smart.jpg">
@@ -59,6 +59,7 @@
                     <p class="price">$2.300.200 und</p>
                     <p class="discount">5% off und</p>
                 </div>
+                <button type="reset" class="reset">Eliminar</button>
             </div>
         </div>
         <div class="purchase-summary">
@@ -79,7 +80,35 @@
             </div>
             <div class="button"> <button class="text" type="submit">Continuar</button></div>
             <div class="location"><i class="fa-solid fa-location-dot"></i>
-            <p class="location"> Precios y opciones de entrega basado en tu ubicación actual.</p></div>
+                <p class="location"> Precios y opciones de entrega basado en tu ubicación actual.</p>
+            </div>
+            <div class="img-paymenOptions"><img class="paymentOptions" src="images/paymentOptions.svg" alt=""></div>
+            <div class="container-text">
+                <div class="lock"><i class="fa-solid fa-lock"></i></div>
+                <div class="container-lock-information">
+                    <div class="lock-text"> Compra segura</div>
+                    <div class="lock-information"> Tus datos personales se mantienen bajo estricta confidencialidad y
+                        estan protegidos.</div>
+                </div>
+            </div>
+            <div class="container-text">
+                <div class="lock"><i class="fa-solid fa-award"></i></i></div>
+                <div class="container-lock-information">
+                    <div class="lock-text">Satisfacción Garantizada</div>
+                    <div class="lock-information"> Puedes devolver tu compra en un plazo máximo de 30 dias, el producto
+                        debe estar en perfecto estado: sin uso, tener todos sus accesorios, manuales y embalaje
+                        original. Si tienes dudas, comunicate a nuestra linea de atencion al cliente 3077123 o a la
+                        linea nacional 320 8890294.</div>
+                </div>
+            </div>
+            <div class="container-text">
+                <div class="lock"><i class="fa-solid fa-phone-volume"></i></i></i></div>
+                <div class="container-lock-information">
+                    <div class="lock-text">¿Necesitas ayuda?</div>
+                    <div class="lock-information"> Si necesitas ayuda para completar tu compra llámanos al 320 8890294.
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
