--- a/src/public/css/mediaQueryCart.css
+++ b/src/public/css/mediaQueryCart.css
@@ -3,11 +3,120 @@
 
 
     /* ****inicio de main**** */
+    main {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .main-article {
+        display: flex;
+        flex-wrap: wrap;
+        width: 60%;
+        padding-top: 3px;
+        background: var(--blanco);
+        margin-top: 10px;
+    }
+
+    .purchase-summary {
+        display: flex;
+        flex-wrap: wrap;
+        width: 39%;
+        background-color: var(--grisClaro);
+        margin-top: 10px;
+        margin-left: 7px;
+    }
+    h1.title {
+        width: 90%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        padding-left: 15px;
+        font-size: 20px;
+    }
+
 }
-   
+
 
 /* Desktop */
 @media (min-width: 1024px) {
 
-    /* ****inicio de header**** */
+    /* ****inicio de main**** */
+    article {
+        display: flex;
+        flex-wrap: wrap;
+        width: 50%;
+        position: relative;
+        border: none;
+    }
+    .barra {
+        width: 50%;
+        margin: auto;
+    }
+    .container-total {
+        display: flex;
+        flex-wrap: wrap;
+        width: 50%;
+        margin-top: 5px;
+        margin-bottom: 10px;
+    }
+    
+    .content .fa-trash-can {
+        display: none;
+    }   
+    .content-button {
+        display: flex;
+        flex-wrap: wrap;
+        width: 36%;
+        border: solid 1px;
+        border-radius: 2px;
+        border-color: var(--grisOscuro);
+        height: 45px;
+        margin-left: 10px;
+        margin-top: 21px;
+    }
+    p.price {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+        justify-content: flex-end;
+        font-size: 18px;
+        align-content: center;
+    }
+    p.discount {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%;
+        justify-content: flex-end;
+        font-size: 17px;
+        color: var(--verde);
+    }
+    button.reset {
+        width: 100%;
+        display: flex;
+        border: none;
+        text-decoration: solid;
+        color: var(--celeste);
+        flex-wrap: wrap;
+        font-size: 20px;
+        padding-left: 10px;
+        background: var(--blanco);
+    }
+    .information {
+        display: flex;
+        flex-wrap: wrap;
+        width: 60%;
+        align-content: center;
+    }
+    .information {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+    align-content: center;
+}
+.main-article:hover {
+    cursor: pointer;
+}
+button.text{
+    cursor: pointer;
+}
 }
