--- a/src/public/css/productCart.css
+++ b/src/public/css/productCart.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;
 }
 
-main{
+body {
+    background-color: var(--grisOscuro);
+}
+
+main {
     background-color: var(--grisClaro);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
-img{
+
+img {
     width: 100%;
 }
 
@@ -29,6 +34,11 @@ h1.title {
     padding-left: 15px;
     font-size: 25px;
 }
+.banner {
+    display: flex;
+    width: 100%;
+    position: relative;
+}
 
 img.banner {
     width: 100%;
@@ -38,11 +48,12 @@ img.banner {
 .main-article {
     display: flex;
     flex-wrap: wrap;
-    width: 95%;
+    width: 100%;
     padding-top: 3px;
     background: var(--blanco);
     margin: auto;
 }
+
 article {
     display: flex;
     flex-wrap: wrap;
@@ -51,7 +62,8 @@ article {
     position: relative;
     border-bottom: 1px solid var(--grisOscuro);
 }
-.content .fa-trash-can{
+
+.content .fa-trash-can {
     display: block;
     font-size: 20px;
     padding: 5px;
@@ -59,17 +71,20 @@ article {
     height: 30px;
     position: absolute;
     right: 1px;
-    top: -5px;
+    top: -3px;
 }
+
 img {
     display: flex;
     width: 100%;
 }
+
 .img {
     display: flex;
     flex-wrap: wrap;
     width: 50%;
 }
+
 .brand {
     display: flex;
     flex-wrap: wrap;
@@ -81,47 +96,58 @@ img {
     flex-wrap: wrap;
     width: 50%;
 }
+
 p {
     display: flex;
     flex-wrap: wrap;
     font-size: 13px;
 }
+
 .name {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
 }
+
 h2 {
     font-size: 18px;
     font-style: inherit;
 }
+
 .shipping {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
 }
+
 p.shipping {
     width: 80%;
     margin-left: 5px;
 }
+
 i.fa-solid.fa-check {
     color: var(--verde);
 }
+
 .container-total {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     margin-top: 5px;
+    margin-bottom: 10px;
 }
+
 .content-button {
     display: flex;
     flex-wrap: wrap;
-    width: 40%;
+    width: 36%;
     border: solid 1px;
     border-radius: 2px;
     border-color: var(--grisOscuro);
     height: 45px;
+    margin-left: 10px;
 }
+
 button.decrement {
     display: flex;
     flex-wrap: wrap;
@@ -131,6 +157,7 @@ button.decrement {
     border: none;
     background-color: var(--blanco);
 }
+
 h4 {
     display: flex;
     flex-wrap: wrap;
@@ -140,6 +167,7 @@ h4 {
     border-left: solid 1px var(--grisOscuro);
     border-right: solid 1px var(--grisOscuro);
 }
+
 button.increment {
     display: flex;
     flex-wrap: wrap;
@@ -155,6 +183,7 @@ button.increment {
     flex-wrap: wrap;
     width: 60%;
 }
+
 p.price {
     display: flex;
     flex-wrap: wrap;
@@ -162,6 +191,7 @@ p.price {
     justify-content: flex-end;
     font-size: 15px;
 }
+
 p.discount {
     display: flex;
     flex-wrap: wrap;
@@ -171,18 +201,22 @@ p.discount {
     color: var(--verde);
 
 }
+
 .purchase-summary {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    background-color: var(--blanco);
+    background-color: var(--grisClaro);
     margin-top: 5px;
 }
+
 .subtotal {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    background-color: var(--blanco);
 }
+
 p.subtotal {
     display: flex;
     flex-wrap: wrap;
@@ -190,11 +224,14 @@ p.subtotal {
     justify-content: flex-end;
     font-size: 15px;
 }
+
 .saving {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    background-color: var(--blanco);
 }
+
 p.saving {
     display: flex;
     flex-wrap: wrap;
@@ -202,12 +239,15 @@ p.saving {
     justify-content: flex-end;
     font-size: 15px;
 }
+
 .total {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
     border-bottom: solid 1px var(--grisOscuro);
+    background-color: var(--blanco);
 }
+
 p.total {
     display: flex;
     flex-wrap: wrap;
@@ -217,18 +257,25 @@ p.total {
     margin-bottom: 5px;
     border: none;
 }
+button.reset {
+    display: none;
+}
+
 .button {
     display: flex;
     flex-wrap: wrap;
-    width: 75%;
+    width: 100%;
     margin: auto;
     padding-top: 10px;
+    background-color: var(--blanco);
+    height: 60px;
 }
+
 button.text {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
+    width: 75%;
     font-size: 18px;
     background-color: var(--rojo);
     border: none;
@@ -236,13 +283,17 @@ button.text {
     height: 30px;
     align-content: center;
     color: var(--blanco);
+    margin: auto;
 }
+
 .location {
     display: flex;
     flex-wrap: wrap;
-    width: 90%;
-    margin-top: 10px;
+    width: 100%;
+    background-color: var(--blanco);
+    padding-bottom: 5px;
 }
+
 i.fa-solid.fa-location-dot {
     display: flex;
     flex-wrap: wrap;
@@ -251,11 +302,69 @@ i.fa-solid.fa-location-dot {
     margin: auto;
     justify-content: center;
 }
+
 p.location {
-    font-size: 12px;
+    font-size: 11px;
     width: 80%;
     margin: auto;
     display: flex;
     margin-top: 15px;
+    justify-content: flex-start;
 }
 
+.img-paymenOptions {
+    width: 100%;
+    background-color: var(--grisClaro);
+}
+
+img.paymentOptions {
+    width: 90%;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+.container-text {
+    display: flex;
+    flex-wrap: wrap;
+    width: 95%;
+    margin: auto;
+    border: dashed 1px;
+    background-color: var(--grisClaro);
+    margin-bottom: 10px;
+}
+
+.lock {
+    display: flex;
+    flex-wrap: wrap;
+    width: 15%;
+    justify-content: center;
+    font-size: 25px;
+    margin-top: 5px;
+}
+
+.container-lock-information {
+    width: 85%;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 5px;
+}
+
+.lock-text {
+    display: flex;
+    width: 100%;
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 5px;
+}
+.lock-information {
+    display: flex;
+    width: 100%;
+}
+.lock-information {
+    display: flex;
+    width: 100%;
+    font-size: 12px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
