--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,107 +1,64 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ElectroArco</title>
-
-    <link rel="stylesheet" href="/css/home.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
-</head>
+<%- include('./partials/head') %>
 
 <body>
-    <header>
-        <div class="logo"><img src="images/logo.svg" alt="Logo ElctroArco"></div>
-        <div class="header1">
-            <div class="buscarProducto">
-                <input type="search" placeholder="Buscar productos,marcas" class="input-control2">
-            </div>
-
-            <div class="compra">
-                <i class="fa-solid fa-truck"></i> Envío gratis en referencias seleccionadas
-            </div>
-            <form action="" class="search">
-                <div class="opcionesMenu">
-                    <ul class="menuHeader">
-                        <li>Ofertas</li>
-                        <li>Tiendas Oficiales</li>
-                        <li>Vender</li>
-                        <li>Ayuda</li>
-                    </ul>
-
-                    <ul class="menuHeader">
-                        <li><a href="/register">Crea tu cuenta</a><i class="fa-solid fa-address-card"></i></li>
-                        <li><a href="/login">Ingresá</a><i class="fa-solid fa-right-to-bracket"></i></li>
-                        <li>Mis compras <i class="fa-sharp fa-solid fa-basket-shopping"></i></li>
-                    </ul>
-                </div>
-                <div class="burger-menu">
-                    <i class="fas fa-bars"></i>
-                </div>
-        </div>
-        </form>
-    </header>
-    <div class="banner"><img src="images/img-home-banner.jpg"></div>
+   <%- include('./partials/header') %>
+    <div class="banner"><img src="images/banner.jpg"></div>
 
     <main>
         <h2>Basado en las últimas visitas</h2>
         <div class="ofertas">
             <div class="ofertasBloques">
                 <div class="bloque1">
-                <div class="articulo-horno">
-                    <div class="horno"><img src="images/horno.jpeg"></div>
-                    <div class="relative-horno">
-                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                    <div class="articulo-horno">
+                        <div class="horno"><img src="images/horno.jpeg"> </div>
+                        <div class="relative-horno">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                             <div class="precio-descuento">
                                 <div class="precios">$6.770</div>
                                 <div class="desc">40% OFF</div>
                             </div>
-                        <div class="descripcion">Horno microondas</div>
+                            <div class="descripcion">Horno microondas</div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="articulo-laptop">
-                    <div class="laptop"><img src="images/laptop.jpg"></div>
-                    <div class="relative-laptop">
-                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+
+                    <div class="articulo-laptop">
+                        <div class="laptop"><img src="images/laptop.jpg"></div>
+                        <div class="relative-laptop">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
                             <div class="precio-descuento">
                                 <div class="precios">$230.000</div>
                                 <div class="desc">20% off</div>
                             </div>
-                        <div class="descripcion">Laptop Pro 2019</div>
+                            <div class="descripcion">Laptop Pro 2019</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="bloque2">
+                    <div class="articulo-samsung">
+                        <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
+                        <div class="relative-samsung">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$70.500</div>
+                                <div class="desc">10% off</div>
+                            </div>
+                            <div class="descripcion">Samsung Galaxy S10</div>
+                        </div>
+                    </div>
+                    <div class="articulo-tv">
+                        <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
+                        <div class="relative-tv">
+                            <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
+                            <div class="precio-descuento">
+                                <div class="precios">$23.200</div>
+                                <div class="desc">5% off</div>
+                            </div>
+                            <div class="descripcion">SmartTv Samsung 43"</div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="bloque2">
-                <div class="articulo-samsung">
-                    <div class="samsung"><img src="images/img-samsung-galaxy-s10.jpg"></div>
-                    <div class="relative-samsung">
-                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                        <div class="precio-descuento">
-                            <div class="precios">$70.500</div>
-                            <div class="desc">10% off</div>
-                        </div>
-                        <div class="descripcion">Samsung Galaxy S10</div>
-                    </div>
-                </div>
-                <div class="articulo-tv">
-                    <div class="tv"><img src="images/img-tv-samsung-smart.jpg"></div>
-                    <div class="relative-tv">
-                        <div class="img-envio"><i class="fa-solid fa-truck"></i></div>
-                        <div class="precio-descuento">
-                            <div class="precios">$23.200</div>
-                            <div class="desc">5% off</div>
-                        </div>
-                        <div class="descripcion">SmartTv Samsung 43"</div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 
             <h2>Ofertas</h2>
@@ -157,10 +114,46 @@
                 </div>
             </div>
         </div>
-    </main>
-    <footer>
+        <div class="overlay" id="overlay">
+            <div class="formularioRegistro" id="formularioRegistro">
+                <form action="" method="dialog" class="crear-formulario">
+                    <a href="/" id="botonCerrar" class="botonCerrarFor"><i class="fas fa-times"></i></a>
+                    <h2>Completa tus datos</h2>
+                    <div class="divNombreApellido">
+                        <div class="nombre">
+                            <label>Nombre:</label>
+                            <input type="text" name="nombreUsuario" id="nombreUsuario" class="input-control">
+                        </div>
+                        <div class="apellido">
+                            <label>Apellidos:</label>
+                            <input type="text" name="apellidoUsuario" class="input-control">
+                        </div>
+                    </div>
+                    <div class="celular">
+                        <label>Celular:</label>
+                        <input type="text" name="celularUsuario" class="input-control">
+                    </div>
+                    <div class="divCorreoContrasena">
+                        <div class="correo">
+                            <label>Correo:</label>
+                            <input type="text" name="correoUsuario" id="correoUsuario" class="input-control">
+                        </div>
+                        <div class="contrasena">
+                            <label>Contraseña:</label>
+                            <input type="password" name="contraseñaUsuario" id="contraseñaUsuario"
+                                class="input-control">
+                        </div>
+                    </div>
 
-    </footer>
+                    <div class="boton-guardar">
+                        <button type="submit" class="boton-formulario">ENVIAR</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        <script src="../ventanaRegistro.js"></script>
+    </main>
+    <%- include('./partials/footer') %>
 </body>
 
 </html>
