--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -1,23 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--Fuentes-->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <!--Iconos-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
-    <!--Estilos propios-->
-    <link rel="stylesheet" href="/css/productCart.css">
-    <link href="/css/mediaQueryCart.css" rel="stylesheet">
-    <link href="/css/colors.css" rel="stylesheet">
-    <title>Carro de compras</title>
-</head>
+<%- include('./partials/head') %>
 
 <body>
-    <header></header>
+    <%- include('./partials/header') %>
     <main>
         <div class="barra"><img src="images/barra.png" alt=""></div>
         <div class="main-article">
@@ -111,8 +95,7 @@
             </div>
         </div>
     </main>
-    <footer>
-    </footer>
+    <%- include('./partials/footer') %>
 
 </body>
 
