--- a/src/public/css/productdetail.css
+++ b/src/public/css/productdetail.css
@@ -57,9 +57,6 @@ button.fa-chevron-left:a {
     padding: 5px 5px 2.5px 5px;
 }
 
-.price::before {
-    content: "$ ";
-}
 
 .box4 {
     display: block;
@@ -171,7 +168,7 @@ a {
     margin-left: 85%;
 }
 
-@media(min-width:760px) {
+@media(min-width:768px) {
     .box1-1 {
         position: relative;
         flex-direction: column;
@@ -354,13 +351,6 @@ a {
         font-size: 14px;
     }
 
-    ul {
-        list-style: none;
-        border-bottom: 1px solid #000000;
-        border-left: 1px solid #000000;
-        border-right: 1px solid #000000;
-    }
-
     div {
         font-size: 14px;
     }
@@ -379,67 +369,309 @@ a {
         text-align: justify;
     }
 
-    .pieDePagina {
+    /* Start Main*/
+
+    .containerProductDetail {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
         grid-template-areas:
-            "one two three";
-        padding: 20px 20px 5px 20px;
+            "slide slide containerProductDescription"
+            "slide slide containerPriceAndShipping"
+            "containerOutstandingFeatures containerProductOverview containerPriceAndShipping";
+        gap: 10px;
+        padding: 20px;
+        box-shadow:
+            inset 0 -3em 3em rgba(0, 0, 0, 0.1),
+            0 0 0 2px rgb(255, 255, 255),
+            0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
     }
 
-    #pieDePagina1 {
-        grid-area: one;
-    }
-
-    #pieDePagina2 {
-        grid-area: two;
-    }
-
-    #pieDePagina3 {
-        grid-area: three;
-    }
-
-    #pieDePagina1-1 {
+    .slide {
+        grid-area: slide;
         display: flex;
-        margin-bottom: 20px;
+        justify-content: center;
+        align-items: center;
     }
 
-    #pieDePagina2-1 {
+    .slide img {
+        width: 60%;
+    }
+
+    #containerProductDescription {
+        grid-area: containerProductDescription;
+        padding-top: 20px;
+    }
+
+    #containerPriceAndShipping {
+        grid-area: containerPriceAndShipping;
         display: flex;
-        margin-bottom: 20px;
+        flex-direction: column;
+        width: 100%;
+        padding-left: 25px;
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        margin: -25px 0px 120px 6px;
+
     }
 
-    #pieDePagina3-1 {
+    #containerOutstandingFeatures {
+        grid-area: containerOutstandingFeatures;
+    }
+
+    .titleOutstandingFeatures,
+    .titleProductOverview {
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 2;
+    }
+
+    .textProductOverview {
+        font-size: 14px;
+        text-align: justify;
+        margin-top: 5px;
+    }
+
+    .listOutstandingFeatures {
+        font-size: 14px;
+        padding-left: 25px;
+        text-align: justify;
+        padding-right: 10px;
+    }
+
+    .listOutstandingFeatures li {
+        line-height: 2;
+    }
+
+    #containerProductOverview {
+        grid-area: containerProductOverview;
+    }
+
+    #containerProductDescription {
         display: flex;
-        margin-bottom: 20px;
+        width: 100%;
+        flex-direction: column;
     }
 
-    #questions, #retiroEnvio, #politicas {
+    .titleProductDescription {
+        font-weight: bold;
+        font-size: 24px;
+        margin-bottom: 15px;
+        text-align: justify;
+    }
+
+    .subtitleProductDescription {
+        font-size: 12px;
+        font-weight: 300;
+    }
+
+    .price::before {
+        content: "$ ";
+    }
+
+    .price {
+        display: flex;
+        font-size: 32px;
+        line-height: 37px;
+        margin-bottom: 5px;
+        font-weight: 800;
+        margin-top: 10px;
+    }
+
+    .deliveryOptions {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 3;
+    }
+
+    .addAmount {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 10px;
+    }
+
+    .addToCart {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 90%;
+        font-size: 18px;
+        background-color: var(--rojo);
+        border: none;
+        border-radius: 5px;
+        height: 30px;
+        align-content: center;
+        color: var(--blanco);
+        margin: auto;
+    }
+
+    .addAmount {
+        margin-bottom: 15px;
+        margin-left: -25px;
+    }
+
+    .text2 {
+        font-size: 16px;
+        text-align: justify;
+        margin-top: 5px;
+        font-weight: 100;
+    }
+
+    .availabilityInStore {
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 3;
+    }
+
+    .containerSelectStore {
+        display: flex;
+        width: 100%;
+        align-items: center;
+    }
+
+    .iconSelectStore {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .containerDeliveryOptions {
+        margin-bottom: 15px;
+    }
+
+    .textSelectStore {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 16px;
+        text-align: justify;
+        margin-top: 5px;
+        font-weight: 100;
+        font-style: italic;
+    }
+
+    /* End Main */
+
+    /*Start Footer*/
+
+    .footerContainer1 {
+        display: flex;
+        justify-content: space-around;
+        padding: 0 70px 0 70px;
+        width: 100%;
+        background-color: var(--grisClaro);
+        padding: 25px 60px 25px 60px;
+    }
+
+    .iconPaper,
+    .iconSend,
+    .iconPersonal,
+    .iconPhone {
+        display: flex;
+        justify-content: center;
+    }
+
+    .containerPQRS,
+    .containerSend,
+    .containerPersonalInformation,
+    .containerPhone {
+        display: flex;
+        flex-direction: column;
+        width: 16%;
+    }
+
+    .text1 {
+        text-align: center;
+    }
+
+    .footerContainer2 {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+        padding: 20px 20px 10px 30px;
+    }
+
+    .containerCustomerService,
+    .containerUser,
+    .containerMoreInfo,
+    .containerSocialNetworks {
+        display: flex;
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .contenedorIconsSocialNetworks {
+        display: flex;
+        width: 100%;
+        justify-content: stretch;
+    }
+
+    .iconsSocialNetworks {
+        font-size: 30px;
+        margin-right: 10px;
+        color: var(--grisOscuro);
+    }
+
+    .titlesFooterContainer2 {
         font-size: 14px;
         font-weight: bold;
+        margin-bottom: 15px;
     }
 
-    #circle {
-        margin-top: -1px;
-    }
-
-    #questions1, #retiroEnvio1, #politicas1 {
-        font-size: 12px;
+    .textFooterContainer2 {
         margin-bottom: 10px;
+    }
+
+    .containerRightsReserved {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        padding: 10px 0px 10px 0px;
+        border-top: 1px solid var(--grisClaro);
+    }
+
+    .logoRightsReserved img {
+        width: 30px;
+        align-items: center;
+        display: flex;
+    }
+
+    #textRightsReserved {
+        align-items: center;
+        display: flex;
+        font-size: 10px;
+    }
+
+    .containerOnlineChat {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 40px;
+    }
+
+    #iconWhatsApp {
+        font-size: 40px;
+    }
+
+    #textOnlineChat {
+        font-size: 10px;
+        font-style: italic;
         font-weight: bold;
     }
 
-    #questions2, #retiroEnvio2 {
-        font-size: 12px;
-        text-align: justify;
-        margin-right: 20px;
-    }
+    /*End Footer*/
 
-    #politicas2 {
-        font-size: 12px;
-        text-align: justify;
-        margin-right: 0px;
-    }
+}
 
+@media(min-width:1279px) {
+    /*Start Footer*/
+
+    .footerContainer1 {
+        display: flex;
+        justify-content: space-around;
+        padding: 0 70px 0 70px;
+        width: 100%;
+        background-color: var(--grisClaro);
+        padding: 25px 70px 25px 70px;
+    }
 }
