--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/css/colors.css">
     <link rel="stylesheet" href="/css/productCart.css">
     <link rel="stylesheet" href="/css/mediaQueryCart.css" >
+    <link rel="stylesheet" href="/css/productdetail.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
