--- a/src/views/productdetail.ejs
+++ b/src/views/productdetail.ejs
@@ -1,83 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ElectroArco</title>
+
+
+    <link rel="stylesheet" href="/css/colors.css">
+
     <link rel="stylesheet" href="/css/productdetail.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/34b99c374a.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
-    <link href="/css/colors.css" rel="stylesheet">
-    <title>ElectoArco</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
-        <section class="box3">
-            <p class="title">Marca</9>
-            <p class="subtitle">Nombre del producto</p>
-            <p class="other">Número de producto:</p>
-        </section>
-        <section class="productimage">
-            <div id="conteItemsCarrusel">
-                <div class="itemCarrusel" id="itemCarrusel-1">
-                    <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
-                        <img src="./images/product image.jpg" alt="item-1-Carrusel">
+        <section class="containerProductDetail1">
+            <div class="containerNavigationBar">
+                <div id="iconLeft">
+                    <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <div id="iconShare">
+                    <i class="fa-regular fa-share-from-square"></i>
+                </div>
+                <div id="iconProductCart">
+                    <i class="fa-brands fa-shopify"></i>
+                </div>
+            </div>
+            <div class="containerProductInfo">
+                <div id="mark">
+                    <p>Samsung</p>
+                </div>
+                <div id="productName">
+                    <p>Galaxy S10 Core 32GB Blue</p>
+                </div>
+                <div id="subtitleProductDescription">
+                    <p>Código: 0802 0011 2236</p>
+                </div>
+            </div>
+            <div class="slide1"><img src="images/img-samsung-galaxy-s10.jpg" alt="aquívalaimagendelproducto"></div>
+            <div class="price1">
+                <p>1.700.000</p>
+            </div>
+            <div id="containerPriceAndShipping1">
+                <div class="deliveryOptions1">
+                    <p>Opciones de entrega</p>
+                </div>
+                <div class="containerDeliveryOptions1">
+                    <div class="textDO1">
+                        <label>
+                            <input type="radio" name="deliveryOptions" value="Envío a tu dirección"><i id="truck2"><i
+                                    class="fas fa-truck"></i></i>Envío a tu dirección
+                        </label>
                     </div>
-                    <div class="flechasCarrusel">
-                        <a href="#itemCarrusel-3">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </a>
-                        <a href="#itemCarrusel-2">
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
+                    <div class="textDO1">
+                        <label>
+                            <input type="radio" name="deliveryOptions" value="Recoge en la tienda"><i
+                                class="fas fa-shopping-bag"></i></i>Recoge en la tienda
+                        </label>
                     </div>
                 </div>
-                <div class="itemCarrusel" id="itemCarrusel-2">
-                    <div class="tarjetaCarrusel" id="tarjetaCarrusel-2">
-                        <img src="./images/product image 1.jpg" alt="item-2-Carrusel">
-                    </div>
-                    <div class="flechasCarrusel">
-                        <a href="#itemCarrusel-1">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </a>
-                        <a href="#itemCarrusel-3">
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-                    </div>
+                <div class="availabilityInStore1">
+                    <p>Disponibilidad en tienda</p>
                 </div>
-                <div class="itemCarrusel" id="itemCarrusel-3">
-                    <div class="tarjetaCarrusel" id="tarjetaCarrusel-3">
-                        <img src="./images/product image 2.jpg" alt="item-1-Carrusel">
-                    </div>
-                    <div class="flechasCarrusel">
-                        <a href="#itemCarrusel-2">
-                            <i class="fa-solid fa-arrow-left"></i>
-                        </a>
-                        <a href="#itemCarrusel-1">
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
+                <div class="containerSelectStore1">
+                    <div class="iconSelectStore1"><i class="fas fa-store"></i></i></div>
+                    <div class="textSelectStore1">
+                        <p>Seleccionar tienda</p>
                     </div>
                 </div>
             </div>
-            <div id="contePuntos">
-                <a href="#itemCarrusel-1">·</a>
-                <a href="#itemCarrusel-2">·</a>
-                <a href="#itemCarrusel-3">·</a>
-            </div>
-        </section>
-        <section class="box4">
-            <div>
-                <p class="price">Precio</p>
-            </div>
-            <div class="subbox1">
-                <i class="fas fa-info-circle"></i>
-                <button name="moreinfo"><a href="#">
-                        <p class="moreinfo">Más información del producto
-                    </a></button>
+            <div class="addAmount1">
+                <button class="addToCart1" type="submit">Agregar al Carrito</button>
             </div>
         </section>
         <section class="containerProductDetail">
@@ -91,7 +86,7 @@
                     <p>1.700.000</p>
                 </div>
                 <div class="addAmount">
-                        <button class="addToCart" type="submit">Agregar al Carrito</button>
+                    <button class="addToCart" type="submit">Agregar al Carrito</button>
                 </div>
                 <div class="deliveryOptions">
                     <p>Opciones de entrega</p>
@@ -144,10 +139,10 @@
                 </div>
             </div>
         </section>
-        <div id="containerMoreInfoProduct">
+        <section id="containerMoreInfoProduct">
             <i class="fas fa-info-circle"></i>
             <p>Más información del producto</p>
-        </div>
+        </section>
     </main>
 </body>
 
