se ajustan errores en maquetacion version mobile del footer

--- a/src/views/productdetail.ejs
+++ b/src/views/productdetail.ejs
@@ -6,7 +6,7 @@
 
 
     <link rel="stylesheet" href="/css/colors.css">
-
+    <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/productdetail.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -145,5 +145,5 @@
         </section>
     </main>
 </body>
-
+<%- include('./partials/footer') %>
 </html>
