--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -1,7 +1,10 @@
 .containerPQRS,
 .containerSend,
 .containerPersonalInformation,
-.containerPhone,
+.containerPhone {
+    display: none;
+}
+
 .textFooterContainer2 {
     display: none;
 }
@@ -14,19 +17,14 @@
     background-color: var(--grisClaro);
 }
 
-
-.footerContainer2 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    width: 100%;
-}
-
 .contenedorIconsSocialNetworks {
     display: none;
 }
 
-.containerCustomerService, .containerUser, .containerMoreInfo, .containerSocialNetworks {
+.containerCustomerService,
+.containerUser,
+.containerMoreInfo,
+.containerSocialNetworks {
     width: 100%;
     margin-bottom: 3px;
 }
@@ -39,7 +37,6 @@
     justify-content: center;
     color: var(--verde);
 }
-
 
 .titlesFooterContainer2 p {
     font-style: italic;
@@ -65,7 +62,6 @@
     display: flex;
     font-size: 10px;
 }
-
 
 @media(min-width:768px) {
 
@@ -94,7 +90,7 @@
     .containerPhone {
         display: flex;
         flex-direction: column;
-        width: 16%;
+        width: 19%;
     }
 
     .text1 {
@@ -106,15 +102,6 @@
         justify-content: space-around;
         width: 100%;
         padding: 20px 20px 10px 30px;
-    }
-
-    .containerCustomerService,
-    .containerUser,
-    .containerMoreInfo,
-    .containerSocialNetworks {
-        display: flex;
-        width: 100%;
-        flex-direction: column;
     }
 
     .contenedorIconsSocialNetworks {
@@ -133,10 +120,14 @@
         font-size: 14px;
         font-weight: bold;
         margin-bottom: 15px;
+        border-style: none;
+        background: none;
+        height: 0;
     }
 
     .textFooterContainer2 {
         margin-bottom: 10px;
+        display: flex;
     }
 
     .containerRightsReserved {
@@ -146,19 +137,19 @@
         padding: 10px 0px 10px 0px;
         border-top: 1px solid var(--grisClaro);
     }
-
+    
     .logoRightsReserved img {
         width: 30px;
         align-items: center;
         display: flex;
     }
-
+    
     #textRightsReserved {
         align-items: center;
         display: flex;
         font-size: 10px;
     }
-
+    
     .containerOnlineChat {
         display: flex;
         flex-direction: column;
@@ -166,20 +157,23 @@
         margin-top: 40px;
         color: var(--verde);
     }
-
+    
     #iconWhatsApp {
         font-size: 40px;
     }
-
+    
     #textOnlineChat {
         font-size: 10px;
         font-style: italic;
         font-weight: bold;
     }
-
+    
     /*End Footer*/
 
 }
+
+
+
 
 @media(min-width:1024px) {
     /*Start Footer*/
