--- a/src/public/css/productdetail.css
+++ b/src/public/css/productdetail.css
@@ -121,6 +121,7 @@
     display: flex;
     flex-direction: row;
     margin-left: 15px;
+    margin-bottom: 10px;
 }
 
 #containerMoreInfoProduct i, #containerMoreInfoProduct p  {
@@ -320,6 +321,7 @@
         align-items: center;
         margin-left: 50px;
         margin-top: 25px;
+        margin-bottom: 15px;
     }
 
     #containerMoreInfoProduct i {
